# libp2pchannel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  key.pem  server.crt
cmake/: mingw-w64-x86_64.cmake
cmake/mingw-compat/arpa/: inet.h
cmake/mingw-compat/sys/: socket.h
conf/: coturn.conf
deploy/k8s/: README.md  deploy_to_server.sh  namespace.yaml  secrets.yaml  setup_remote.sh
deploy/k8s/coturn/: Dockerfile  configmap.yaml  deployment.yaml
deploy/k8s/redis/: service.yaml  statefulset.yaml
deploy/k8s/signaling/: Dockerfile  deployment.yaml  service.yaml
deploy/win/: start_client.bat  start_peer.bat
docs/: design-p2p-av.md  design-xquic-ice.md
examples/: CMakeLists.txt  p2pav_subscriber_example.c
p2p/: CMakeLists.txt
p2p/include/: p2p_adapter.h  p2p_av_capture.h  p2p_av_codec.h  p2p_packet_queue.h  p2p_platform.h  p2p_publisher.h  p2p_sdl_render.h  p2p_signaling.h  p2p_subscriber.h  p2p_tls.h  p2pav.h
p2p/src/: p2p_adapter.c  p2p_av_capture.c  p2p_av_codec.c  p2p_client.c  p2p_packet_queue.c  p2p_peer.c  p2p_publisher.c  p2p_sdl_render.c  p2p_signaling.c  p2p_subscriber.c  p2p_tls.c  p2pav.c
scripts/: build.sh  build_android.sh  build_win.sh  deploy_client.sh  deploy_peer.sh  endurance_monitor.sh  run_av_test.sh  run_client_on_k3s.sh  run_client_remote.sh  run_docker_udp_blocked_test.sh  run_e2e_test.sh  run_p2p_middleware_test.sh  run_p2p_on_k8s.sh  run_p2p_process_test.sh  run_p2pav_e2e_test.sh  run_p2pav_stress_test.sh  run_peer_on_k3s.sh  run_peer_remote.sh  run_tcp_only_test.sh  start_coturn.sh  start_signaling.sh  win_endurance_monitor.sh
signaling-server/: cert.pem  go.mod  go.sum  key.pem  main.go  main_test.go
signaling-server/auth/: jwt.go
signaling-server/config/: config.go
signaling-server/handler/: admin_handler.go  signal_handler.go  sse_handler.go  ws_handler.go
signaling-server/model/: message.go
signaling-server/pubsub/: pubsub.go
signaling-server/room/: manager.go
src/examples/: p2pav_publisher_example.c
src/p2p/: CMakeLists.txt
src/p2p/include/: p2p_adapter.h  p2p_av_capture.h  p2p_av_codec.h  p2p_publisher.h  p2p_sdl_font.h  p2p_sdl_render.h  p2p_signaling.h  p2pav.h
src/p2p/src/: p2p_adapter.c  p2p_av_capture.c  p2p_av_codec.c  p2p_client.c  p2p_packet_queue.c  p2p_peer.c  p2p_publisher.c  p2p_sdl_font.c  p2p_sdl_render.c  p2p_signaling.c  p2p_subscriber.c  p2pav.c
src/signaling-server/: go.mod  main.go
src/signaling-server/handler/: sse_handler.go
src/signaling-server/middleware/: auth.go
src/signaling-server/model/: message.go
src/signaling-server/pubsub/: redis.go
src/signaling-server/store/: memory.go  redis.go  store.go
src/signaling_server/handler/: signal_handler.go  sse_handler.go
src/signaling_server/pubsub/: local.go  pubsub.go
src/signaling_server/turn/: credentials.go
tests/: CMakeLists.txt  Dockerfile.udp_blocked  docker_udp_blocked_entrypoint.sh  test_av_continuity.c  test_av_control.c  test_av_e2e.txt  test_ice_connectivity.c  test_p2p_middleware.c  test_p2pav_e2e.c  test_p2pav_stress.c  test_p2pav_udp_blocked.c  test_signaling.c  test_video_stop.c
xquic/: CMakeLists.txt
